{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 93,
  "lineage": "d16fbc22-21d2-2942-8d7d-b3a332345d18",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017942a287cd417fb",
            "arn": "arn:aws:ec2:us-west-2:202533497212:elastic-ip/eipalloc-017942a287cd417fb",
            "association_id": "eipassoc-0ea753d1e88c27751",
            "domain": "vpc",
            "id": "eipalloc-017942a287cd417fb",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c940b70fce17f57d",
            "private_dns": "ip-10-0-101-207.us-west-2.compute.internal",
            "private_ip": "10.0.101.207",
            "public_dns": "ec2-35-95-206-143.us-west-2.compute.amazonaws.com",
            "public_ip": "35.95.206.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-nat-eip",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-nat-eip",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:internet-gateway/igw-01495bf05e744b9ac",
            "id": "igw-01495bf05e744b9ac",
            "owner_id": "202533497212",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-igw",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-igw",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017942a287cd417fb",
            "association_id": "eipassoc-0ea753d1e88c27751",
            "connectivity_type": "public",
            "id": "nat-0555e974154b1f5df",
            "network_interface_id": "eni-0c940b70fce17f57d",
            "private_ip": "10.0.101.207",
            "public_ip": "35.95.206.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b41e4153b12c1884",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-nat",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-nat",
              "Project": "recipe-automation",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:route-table/rtb-08e8c767143f3ae8c",
            "id": "rtb-08e8c767143f3ae8c",
            "owner_id": "202533497212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0555e974154b1f5df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-private-rt",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-private-rt",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:route-table/rtb-0f7f0fd4dc512d69e",
            "id": "rtb-0f7f0fd4dc512d69e",
            "owner_id": "202533497212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01495bf05e744b9ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-public-rt",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-public-rt",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed642ee7cc32a55b",
            "route_table_id": "rtb-08e8c767143f3ae8c",
            "subnet_id": "subnet-038e66f256362cef4"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec4f46564b341886",
            "route_table_id": "rtb-08e8c767143f3ae8c",
            "subnet_id": "subnet-0f178db05016dd41c"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064ea686e5eab401d",
            "route_table_id": "rtb-0f7f0fd4dc512d69e",
            "subnet_id": "subnet-0b41e4153b12c1884"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00895cf0e1862845a",
            "route_table_id": "rtb-0f7f0fd4dc512d69e",
            "subnet_id": "subnet-07d3d01862fc7f33f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:subnet/subnet-038e66f256362cef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038e66f256362cef4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533497212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-private-1",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-private-1",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Private"
            },
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:subnet/subnet-0f178db05016dd41c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f178db05016dd41c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533497212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-private-2",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-private-2",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Private"
            },
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:subnet/subnet-0b41e4153b12c1884",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b41e4153b12c1884",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202533497212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-public-1",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-public-1",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Public"
            },
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:subnet/subnet-07d3d01862fc7f33f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d3d01862fc7f33f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202533497212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-public-2",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-public-2",
              "Project": "recipe-automation",
              "Terraform": "true",
              "Type": "Public"
            },
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:vpc/vpc-09c73b4c10e72118d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06aaeb57e76e324b0",
            "default_route_table_id": "rtb-082e98de9e16c3766",
            "default_security_group_id": "sg-05f86c5d6bd38c902",
            "dhcp_options_id": "dopt-0d012a27545e7a58f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c73b4c10e72118d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082e98de9e16c3766",
            "owner_id": "202533497212",
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-vpc",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-vpc",
              "Project": "recipe-automation",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202533497212:security-group/sg-0cad38c53e9bb85e1",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cad38c53e9bb85e1",
            "ingress": [],
            "name": "recipe-automation-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "202533497212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-lambda-sg",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "recipe-automation-dev-lambda-sg",
              "Project": "recipe-automation",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c73b4c10e72118d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}